# localzaai

./: dcaig.yaml  manifests.yaml  suite.yaml
andesite/common_code/: .dockerignore  README.md  pyproject.toml
andesite/common_code/common/: main.py
andesite/common_code/common/base/: types.py
andesite/common_code/common/clients/: aws_client.py  azure_embed_client.py  celery_client.py  clamd_client.py  embed_client.py  hf_embed_client.py  milvus_vdb_client.py  mongodb_client.py  pg_vdb_client.py  qdrant_vdb_client.py  redis_client.py  vdb_client.py  vdb_s3client.py
andesite/common_code/common/engine/handlers/: __init__.py  token_count_handler.py
andesite/common_code/common/managers/alert_attributes/: __init__.py  alert_attribute_manager.py  alert_attribute_model.py
andesite/common_code/common/managers/alert_enrichments/: alert_enrichment_manager.py  alert_enrichment_model.py
andesite/common_code/common/managers/alert_groups/: alert_group_manager.py  alert_group_model.py
andesite/common_code/common/models/: alert_attributes.py  base_model.py  connector_id_enum.py  connectors.py  context.py  conversation.py  cron_config.py  document.py  export_summary.py  metadata.py  mongo.py  react.py  resource.py  secret.py  tool.py
andesite/common_code/common/opentelemetry/: config.py  context.py  initializer.py  k8s_resource_detector.py
andesite/common_code/common/utils/: async_wrap.py  context.py  fallback_none.py  flatten_dict.py  list_helper.py  logging.py  package.py  pydantic_helper.py
andesite/common_code/tests/base/: test_types.py
andesite/common_code/tests/clients/: test_milvus_vdb_client.py
andesite/common_code/tests/jsonlogging/: test_jsonlogger.py
andesite/common_code/tests/managers/: test_alert_attribute_manager.py  test_alert_enrichment_manager.py  test_alert_group_manager.py  test_base_manager.py  test_dataset_description_manager.py  test_dataset_structure_manager.py  test_document_storage_manager.py  test_enterprise_technique_manager.py  test_investigation_manager.py  test_metadata_manager.py  test_prioritization_rule_manager.py  test_user_manager.py
andesite/common_code/tests/models/: test_alerts.py  test_connector_id_enum.py  test_conversation.py  test_migrations.py  test_mongo.py  test_secret.py  test_tool.py
andesite/common_code/tests/opentelemetry/: test_context.py
andesite/common_code/tests/utils/: test_flatten_dict.py  test_list_helpers.py
andesite/connectors_code/: Makefile  README.md  pyproject.toml
andesite/connectors_code/connectors/: __init__.py  cache.py  config.py  metrics.py  parse_alert_configs.py  query_instance.py  query_target_options.py
andesite/connectors_code/connectors/proofpoint/: utils.py
andesite/connectors_code/tests/: test_connector.py
andesite/connectors_code/tests/alerts/: test_alerts.py
andesite/connectors_code/tests/athena/: test_tools.py
andesite/connectors_code/tests/cloudwatch/: test_tools.py
andesite/connectors_code/tests/confluence/: test_merge_data_dictionary.py
andesite/connectors_code/tests/crowdstrike/: test_crowdstrike.py
andesite/connectors_code/tests/domaintools/: test_domaintools_connector.py
andesite/connectors_code/tests/proofpoint/: test_client.py  test_data.py  test_proofpoint_connector.py  test_proofpoint_tools.py  test_utils.py
andesite/connectors_code/tests/salesforce/: test_salesforce_connector.py
andesite/connectors_code/tests/sentinel_one/: test_tools.py
andesite/connectors_code/tests/sharepoint/: test_sharepoint_connector.py
andesite/connectors_code/tests/snowflake/: test_snowflake.py
andesite/connectors_code/tests/splunk/: test_splunk_alerts.py  test_splunk_connector.py  test_splunk_instance.py  test_splunk_times.py
andesite/connectors_code/tests/tenable/: test_tenable_connector.py  test_tenable_tools.py
andesite/last_ver_common_code/: .dockerignore  README.md  pyproject.toml  pytest.ini
andesite/last_ver_common_code/common/: main.py
andesite/last_ver_common_code/common/base/: collection_manager.py
andesite/last_ver_common_code/common/clients/: aws_client.py  celery_client.py  clamd_client.py  mongodb_client.py  redis_client.py
andesite/last_ver_common_code/common/jsonlogging/: jsonlogger.py
andesite/last_ver_common_code/common/models/: alerts.py  base_model.py  connectors.py  context.py  conversation.py  cron_config.py  document.py  metadata.py  mitre.py  mongo.py  react.py  splunk.py  tool.py
andesite/last_ver_common_code/common/opentelemetry/: config.py  constants.py  context.py  initialize.py
andesite/last_ver_common_code/common/utils/: async_wrap.py  context.py  fallback_none.py  list_helper.py  logging.py  package.py  pydantic_helper.py  timer.py
andesite/last_ver_common_code/tests/clients/: test_celery.py
andesite/last_ver_common_code/tests/jsonlogging/: test_jsonlogger.py
andesite/last_ver_common_code/tests/managers/: test_alert_enrichment_manager.py  test_alert_group_manager.py  test_dataset_description_manager.py  test_dataset_structure_manager.py  test_document_storage_manager.py  test_enterprise_technique_manager.py  test_metadata_manager.py  test_prioritization_rule_manager.py  test_user_manager.py
andesite/last_ver_common_code/tests/models/: test_migrations.py  test_mongo.py  test_tool.py
andesite/last_ver_common_code/tests/opentelemetry/: test_context.py  test_initialize.py
andesite/last_ver_common_code/tests/utils/: test_context.py  test_list_helpers.py
andesite/last_ver_connectors_code/: pyproject.toml
andesite/last_ver_connectors_code/connectors/: config.py  connector.py  connector_id_enum.py  connector_old.py  initialize_connector_scopes.py  parse.py  query_instance.py  query_target_options.py  registry.py  tools.py
andesite/last_ver_connectors_code/tests/alerts/: test_alerts.py
andesite/last_ver_connectors_code/tests/equinox/: censys_records.py  test_equinox_instance.py
andesite/last_ver_connectors_code/tests/sentinel_one/: test_model.py  test_tools.py  util.py
andesite/last_ver_connectors_code/tests/splunk/: test_splunk_alerts.py
andesite/last_ver_connectors_code/tests/tenable/: test_tenable_tools.py
(+881 files in other folders)
