[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common utilities package for Metamorph"
authors = ["The Andesite Team"]
readme = "README.md"
packages = [
    { include = "common" },
    { include = "common/py.typed" }
]

[tool.poetry.dependencies]
python = "~3.12"
core = { path = "../core", develop = true }
pydantic = "^2.7.1"
boto3 = "^1.34.107"
boto3-stubs = "^1.34.107"
pydantic-settings = "^2.2.1"
starlette = "0.40.0"
motor = "^3.4.0"
motor-stubs = "^1.7.1"
splunk-sdk = "^2.0.1"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-resourcedetector-docker = "^0.4.0"
opentelemetry-resourcedetector-kubernetes = "^0.3.0"
redis = "^5.0.7"
celery = "^5.4.0"
clamd = "^1.0.2"
croniter = "^3.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.7.4"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
mongomock-motor = "^0.0.30"
setuptools = "^70.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "common/clients/*",
    "common/models/*",
]
